Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19062

assertion failure in fdb_iterator_next `rsize && rsize <= trie->chunksize' failed. SIGABRT: abort

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.1.1
    • 4.1.1
    • forestdb

    Description

      4.1.1-5910 - system testing, 12hrs. Indexer exited similar to MB-18374.
      Unfortunately there are no core files or dmp's on system.

      indexer: /home/couchbase/jenkins/workspace/sherlock-unix/forestdb/src/hbtrie.cc:84: int _hbtrie_reform_key(hbtrie*, void*, int, void*): Assertion `rsize && rsize 
      <= trie->chunksize' failed.
      SIGABRT: abort
      PC=0x7fb1f5aa1cc9
      signal arrived during cgo execution
       
      goroutine 80907656 [syscall, locked to thread]:
      runtime.cgocall_errno(0x403573, 0xc20d992be0, 0x0)
              /usr/local/go/src/runtime/cgocall.go:130 +0xf5 fp=0xc20d992bc0 sp=0xc20d992b98
      github.com/couchbase/indexing/secondary/fdb._Cfunc_fdb_iterator_next(0x7faed64f1000, 0x0)
              /home/couchbase/jenkins/workspace/sherlock-unix/goproj/src/github.com/couchbase/indexing/secondary/fdb/:219 +0x43 fp=0xc20d992be0 sp=0xc20d992bc0
      github.com/couchbase/indexing/secondary/fdb.(*Iterator).Next(0xc3bb5d8600, 0x0, 0x0)
              /home/couchbase/jenkins/workspace/sherlock-unix/goproj/src/github.com/couchbase/indexing/secondary/fdb/iterator.go:70 +0x182 fp=0xc20d992c58 sp=0xc20d992b
      e0
      github.com/couchbase/indexing/secondary/indexer.(*ForestDBIterator).Next(0xc34e5be480)
              /home/couchbase/jenkins/workspace/sherlock-unix/goproj/src/github.com/couchbase/indexing/secondary/indexer/forestdb_iterator.go:118 +0x61 fp=0xc20d992cd8 
      sp=0xc20d992c58
      github.com/couchbase/indexing/secondary/indexer.(*fdbSnapshot).Iterate(0xc3804d23c0, 0x7fb1f6493b28, 0xc3bb7e70e0, 0x7fb1f6493b28, 0xc3bb7e7140, 0x0, 0x10be4b8, 0
      xc3bb5d85d0, 0x0, 0x0)
              /home/couchbase/jenkins/workspace/sherlock-unix/goproj/src/github.com/couchbase/indexing/secondary/indexer/forestdb_snapshot_reader.go:142 +0x33d fp=0xc20d992d78 sp=0xc20d992cd8
      github.com/couchbase/indexing/secondary/indexer.(*fdbSnapshot).Range(0xc3804d23c0, 0x7fb1f6493b28, 0xc3bb7e70e0, 0x7fb1f6493b28, 0xc3bb7e7140, 0x0, 0xc3bb5d85d0, 0x0, 0x0)
              /home/couchbase/jenkins/workspace/sherlock-unix/goproj/src/github.com/couchbase/indexing/secondary/indexer/forestdb_snapshot_reader.go:110 +0x9e fp=0xc20d992dd0 sp=0xc20d992d78
      github.com/couchbase/indexing/secondary/indexer.(*IndexScanSource).Routine(0xc3a26642a0, 0x0, 0x0)
              /home/couchbase/jenkins/workspace/sherlock-unix/goproj/src/github.com/couchbase/indexing/secondary/indexer/scan_pipeline.go:118 +0x5e5 fp=0xc20d992f38 sp=0xc20d992dd0
      github.com/couchbase/indexing/secondary/pipeline.func·002()
              /home/couchbase/jenkins/workspace/sherlock-unix/goproj/src/github.com/couchbase/indexing/secondary/pipeline/pipeline.go:75 +0x5d fp=0xc20d992fe0 sp=0xc20d992f38
      runtime.goexit()
              /usr/local/go/src/runtime/asm_amd64.s:2232 +0x1 fp=0xc20d992fe8 sp=0xc20d992fe0
      created by github.com/couchbase/indexing/secondary/pipeline.(*Pipeline).runIt
              /home/couchbase/jenkins/workspace/sherlock-unix/goproj/src/github.com/couchbase/indexing/secondary/pipeline/pipeline.go:80 +0xfc
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              tommie Tommie McAfee (Inactive)
              tommie Tommie McAfee (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  PagerDuty